# Size-Table-Generator

./: .gitignore  package.json
.github/workflows/: release.yml
public/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main.json
src-tauri/phdb-translate/: Cargo.toml  build.rs  phdb-glossary.csv
src-tauri/phdb-translate/src/: error.rs  lib.rs
src-tauri/src/: config.rs  custom_command.rs  excel_processor.rs  main.rs  models.rs  size_parser.rs
src/components/ControlPanel/: Button.tsx  ExcelPreview.tsx  OpenExcelFile.tsx  SavePics.tsx  SelectSaveDir.tsx  index.tsx
src/components/Preview/: ListView.tsx
src/lib/: saveFile.ts  utility.ts
