[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2018"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0.82"
melrose-types = {version = "0.7.6", registry = "eliamo", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all"] }
calamine = "0.22"
itertools = "0.10.3"
phdb-translate = {path = "./phdb-translate"}

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
