[package]
name = "phdb-translate"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gcp_auth = "0.7.3"
once_cell = "1.12.0"
reqwest = {version = "0.12",default-features = false, features = ["json", "rustls-tls"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
csv = "1.3.0"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }

[dev-dependencies]
dotenv = "0.15.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
tokio = { version = "1.19.2", features = ["full"] }
